--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -119,23 +119,28 @@
        "[1, 2, 2, 3, 4, 5, 7, 9, 43]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def  quickSort(myList):\n",
-    "    if len(myList) <= 1:  # base case;\n",
-    "        sortedList = myList\n",
+    "#Quick Sort\n",
+    "###A list of numbers is given\n",
+    "###Sorts numbers in ascending/descending order\n",
+    "###Separate list by comparing a pivot\n",
+    "###recursive call of quickSort() divides the list into 3 parts, <, =, >\n",
+    "def quickSort(myList):\n",
+    "    if len(myList) <= 1:                                #base case\n",
+    "        sortedList = myList                             #final output\n",
     "    \n",
-    "    else: \n",
-    "        pivot = myList[0]\n",
-    "        big = []\n",
-    "        small = []\n",
-    "        same = []\n",
+    "    else:                                               #if list has more than 1 element\n",
+    "        pivot = myList[0]                               #take first element as pivot\n",
+    "        big = []                                        #initialize list for numbers bigger than pivot\n",
+    "        small = []                                      #initialize list for smaller numbers\n",
+    "        same = []                                       #initialize list for equal numbers\n",
     "    \n",
-    "        for item in myList:\n",
+    "        for item in myList:                             #loop through list and put elements into appropriate list\n",
     "            if item > pivot:\n",
     "                big.append(item)\n",
     "            elif item < pivot:\n",
@@ -146,32 +151,14 @@
     "        sortedList = quickSort(small) + same + quickSort(big)\n",
     "    return sortedList\n",
     "\n",
-    "some = [2,7,43,2,4,1,3,5,9]\n",
+    "randomList = [2,7,43,2,4,1,3,5,9]\n",
     "\n",
-    "quickSort(some)"
+    "quickSort(randomList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Assignment 5\n",
-    "\n",
-    "def mySum(lst):\n",
-    "    s = 0\n",
-    "    \n",
-    "    for i in range(len(lst)):\n",
-    "        st = lst[i]\n",
-    "\n",
-    "    for i in lst:\n",
-    "        s += i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -180,26 +167,26 @@
        "76"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def mySumRecursive(lst):\n",
+    "#Summation of Elements in List Using Recursion\n",
     "\n",
-    "    if len(lst) == 1:\n",
-    "        return lst[0]\n",
-    "\n",
+    "def mySumRecursive(someList):\n",
+    "    if len(someList) == 1:\n",
+    "        return someList[0]\n",
     "    else: \n",
-    "        return lst[0] + mySumRecursive(lst[1:])\n",
-    "\n",
-    "mySumRecursive(some)"
+    "        return someList[0] + mySumRecursive(someList[1:])           #[1:] means start from first index\n",
+    "                                                                    #take first element, then add the next one in recursive call\n",
+    "mySumRecursive(randomList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -211,18 +198,21 @@
     }
    ],
    "source": [
+    "#Summation of Exponents of Base 2 Using Recursion\n",
+    "#∑2^n from 0 to n\n",
     "def sumExpTwo(n):\n",
-    "    if n == 0:\n",
+    "    if n == 0:                                          #base case\n",
     "        return 1\n",
-    "    else: \n",
-    "        return 2**n + sumExpTwo(n-1)\n",
+    "    else:                                               #for exponents where n >0\n",
+    "        return 2**n + sumExpTwo(n-1)                    #summation using recursion\n",
     "\n",
+    "#∑2^n from 0 to 10\n",
     "print(sumExpTwo(10))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +224,7 @@
     }
    ],
    "source": [
+    "#Square Root Function Using Nested Function\n",
     "def squareRoot(a,tol):           #define variables!\n",
     "    \n",
     "    x = a/2\n",
@@ -250,83 +241,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r= [0.73908513]\n",
-      "result= [0.]\n"
+      "root = [0.73908513]\n",
+      "result = [0.]\n"
      ]
     }
    ],
    "source": [
+    "#Finding the Root\n",
+    "\n",
     "from re import X\n",
     "import numpy as np\n",
     "from scipy import optimize\n",
     "\n",
-    "f= lambda x: np.cos(x) - x\n",
-    "r = optimize.fsolve(f,-2)           #(-2) is the initial guess              #fsolve, solves for the root when given polynomial\n",
-    "print(\"r=\", r)\n",
+    "###f(x) = cos(x) - x \n",
+    "f = lambda x: np.cos(x) - x            #initialize function\n",
     "\n",
-    "result = f(r)\n",
-    "print(\"result=\", result)            #almost zero, that's why 0.\n",
+    "#Approximation with initial guess\n",
+    "root = optimize.fsolve(f,-2)           #(-2) is the initial guess              #fsolve, solves for the root when given polynomial\n",
+    "print(\"root =\", root)                     #root is at x = root\n",
     "\n",
-    "\n"
+    "#verify the solution is a root\n",
+    "result = f(root)                        #\n",
+    "print(\"result =\", result)            #almost zero, that's why 0.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([  1., 100.])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1. 100.]\n"
+     ]
     }
    ],
    "source": [
+    "#Finding Root of Other Functions\n",
+    "\n",
     "from scipy.optimize import fsolve\n",
+    "\n",
+    "###f(x) = x^3 -100x^2 - x + 100\n",
     "f = lambda x: x**3-100*x**2-x+100\n",
     "\n",
-    "fsolve(f, [2,80])                       #[2,80] is the initial guess\n"
+    "#Approximation With Initial Guess\n",
+    "result = fsolve(f, [2,80])                       #[2,80] is the initial guess\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bisect import bisect\n",
-    "\n",
-    "\n",
-    "def bisection(f,a,b,tol):\n",
-    "    if np.sign(f(a)) == np.sign(f(b)):  \n",
-    "        raise Exception(\"The scalars a and b do not bound a root\")                  #stops program and raises flag\n",
-    "    \n",
-    "    m = (a + b)/2\n",
-    "\n",
-    "    if np.abs(f(m)) < tol:                                      #if the answer is close enough\n",
-    "        return m                                                #return m as the root\n",
-    "    #have to know which side the root is in\n",
-    "    elif np.sign(f(a)) == np.sign(f(m)):\n",
-    "        return bisection(f,m,b,tol)\n",
-    "    elif np.sign(f(b)) == np.sign(f(m)):\n",
-    "        return bisection(f,a,m, tol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -341,45 +315,45 @@
     }
    ],
    "source": [
+    "#Finding the Root Using the Bisection Method with Recursion\n",
+    "###Approximates using recursion a root 'R' of f bounded by 'a' and 'b' \n",
+    "###to within tolerance  |f(m)| < tol\n",
+    "###with m as the midpoint between 'a' and 'b'\n",
+    "\n",
+    "def bisection(f,a,b,tol):\n",
+    "    if np.sign(f(a)) == np.sign(f(b)):                          #check if 'a' and 'b' bound a root\n",
+    "        raise Exception(\"The scalars a and b do not bound a root\")                  #stops program and raises flag\n",
+    "    \n",
+    "    m = (a + b)/2                                               #get the midpoint\n",
+    "\n",
+    "    if np.abs(f(m)) < tol:                                      #if the answer is close enough\n",
+    "        return m                                                #return m as the root\n",
+    "    #have to know which side the root is in\n",
+    "    elif np.sign(f(a)) == np.sign(f(m)):                        #if the sign for 'a' and 'm' are the same\n",
+    "                                                                #means that 'm' is closer to root than 'a'\n",
+    "        return bisection(f,m,b,tol)                             #recursive call where m is an improvement of a; a = m\n",
+    "    elif np.sign(f(b)) == np.sign(f(m)):                        #if the sign for 'b' and 'm' are the same\n",
+    "                                                                #means that 'm' is closer to the root than 'b'\n",
+    "        return bisection(f,a,m, tol)                            #recursive call where m is an improvement of b; b = m\n",
+    "\n",
+    "###Testing function\n",
     "f = lambda x: x**2 -2\n",
     "\n",
-    "r1 = bisection(f,0,2,0.1)\n",
+    "r1 = bisection(f,0,2,0.1)                   #high tolerance\n",
     "print(\"r1 = \", r1)\n",
-    "r01 = bisection(f,0,2,0.01)\n",
+    "r01 = bisection(f,0,2,0.01)                 #lower tolerance\n",
     "print(\"r01 = \", r01)\n",
     "\n",
     "print(\"f(r1) = \", f(r1))\n",
     "print(\"f(r01) = \", f(r01))\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "The scalars a and b do not bound a root",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#example of an exception\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mbisection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [4], line 6\u001b[0m, in \u001b[0;36mbisection\u001b[0;34m(f, a, b, tol)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbisection\u001b[39m(f,a,b,tol):\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39msign(f(a)) \u001b[38;5;241m==\u001b[39m np\u001b[38;5;241m.\u001b[39msign(f(b)):  \n\u001b[0;32m----> 6\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe scalars a and b do not bound a root\u001b[39m\u001b[38;5;124m\"\u001b[39m)                  \u001b[38;5;66;03m#stops program and raises flag\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     m \u001b[38;5;241m=\u001b[39m (a \u001b[38;5;241m+\u001b[39m b)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39mabs(f(m)) \u001b[38;5;241m<\u001b[39m tol:                                      \u001b[38;5;66;03m#if the answer is close enough\u001b[39;00m\n",
-      "\u001b[0;31mException\u001b[0m: The scalars a and b do not bound a root"
-     ]
-    }
-   ],
-   "source": [
     "#example of an exception\n",
-    "bisection(f,2,4,0.01)"
+    "#bisection(f,2,4,0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -388,16 +362,18 @@
        "1.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Finding the Root Using the Bisection Method with Iteration\n",
+    "###Calculates root based on number of significant figures using an iterative function\n",
     "import numpy as np\n",
     "\n",
     "def bisection2(f,a,b,tol):\n",
-    "    if np.sign(f(a)) == np.sign(f(b)):\n",
+    "    if np.sign(f(a)) == np.sign(f(b)):                              #it means the function doesn't cross the y axis; therefore no root\n",
     "        raise Exception(\"The scalars a and b do not bound a root\")\n",
     "    \n",
     "    xPrevious = (a + b)/2\n",
@@ -414,6 +390,7 @@
     "\n",
     "        return xNew\n",
     "\n",
+    "###Testing Function\n",
     "f = lambda x: x**2-2\n",
     "tol = 0.5*10**(2-5)/100                     #at least 5 significant figures\n",
     "\n",
@@ -423,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -436,6 +413,9 @@
     }
    ],
    "source": [
+    "#Finding the Root Using the Newton-Raphson Method Using Recursion\n",
+    "###Output is an estimation of the root of f\n",
+    "###Using the Newton Raphson Method recursive implementation\n",
     "def newtonRaphson(d,df,x0, tol):\n",
     "\n",
     "    if abs(f(x0)) < tol:                #base case\n",
@@ -482,13 +462,6 @@
     "\n",
     "newNewtonRaphson(f,delta, 1, tol)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
