--- a/Example Problems/ExamPracticeProblems.ipynb
+++ b/Example Problems/ExamPracticeProblems.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,9 @@
     }
    ],
    "source": [
-    "#Ex #1\n",
+    "#Ex 1\n",
+    "#Write the function book(dict_1) which receives the dictionary variable dict_1 containing the number of books borrowed from the library as values, against students’ admission years as keys. The function returns the dictionary dict_2 which consists of students’ admission years as keys and the percentage of books they borrowed.\n",
+    "\n",
     "\n",
     "dict_1 = {'2018':20, '2019': 30, '2020': 17}\n",
     "dict_2 = {'2018':100, '2019': 30, '2020': 70, '2021':60, '2022': 40}\n",
@@ -63,6 +65,7 @@
    ],
    "source": [
     "#Ex 2\n",
+    "#Program a function area(M) which receives the coordinates of several points in each row and calculate the area enclosed between them using the shoelace formula. Assume that the points are ordered in a clockwise manner.\n",
     "\n",
     "M1 = np.array([[0,0], [5,0],[3,2], [0,2]])\n",
     "M2 = np.array([[1,6], [3,1], [7,2], [4,4], [8,5]])\n",
@@ -99,6 +102,8 @@
    ],
    "source": [
     "#Ex 3\n",
+    "#Write a function reverse(str_1) which receives a number or a string and returns its reverse.\n",
+    "\n",
     "str1 = 'hello'\n",
     "\n",
     "\n",
@@ -119,6 +124,8 @@
     "print(reverse(str1))\n",
     "\n",
     "##Ex 4\n",
+    "#Use the aforementioned function and program a function check(str_1) which receives a number or a string and returns True if  it is read the same in reverse, otherwise returns False.\n",
+    "\n",
     "def check(input):\n",
     "    string = \"\"\n",
     "    \n",
@@ -150,6 +157,10 @@
    ],
    "source": [
     "#Ex 5\n",
+    "#Write a function nth_root(n,a) which returns the nth root of a.\n",
+    "#Use the Newton Raphson method to calculate the nth root by finding the solution of 𝑥^𝑛−𝑎=0\n",
+    "#Define the error as relative approximate value and use a tolerance to ensure at least 10 significant digits.\n",
+    "\n",
     "def nth_root(n,a):\n",
     "    tol = 0.5 * 10 ** (2-10)/100            #ensures 10 significatn digits?\n",
     "    e = 1                           #why 1?\n",
@@ -168,19 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "True\n"
      ]
     }
    ],
    "source": [
     "#Ex 6\n",
+    "#Write a function word_check(str_1,str_2) which returns True if the characters constituting str_1 and str_2 are the same, otherwise returns False. Capital and small letters are not the same characters.\n",
+    "\n",
     "###Set doesnt have duplicates\n",
     "### since Capital letters != lowercase letters\n",
     "\n",
@@ -190,6 +204,7 @@
     "    else:\n",
     "        return False\n",
     "\n",
+    "print(word_check(\"ABC\", \"abc\"))\n",
     "\n",
     "##if capital == small letters \n",
     "def word_check_2(str_1, str_2):\n",
@@ -203,6 +218,13 @@
     "\n",
     "print(word_check_2(\"ABC\", \"abc\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
