--- a/Assignments/Assignment5.ipynb
+++ b/Assignments/Assignment5.ipynb
@@ -2,21 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Assignment 5\n",
+    "\n",
+    "#1\n",
+    "#Write a function my_sum(lst) where lst is a list, and the output is the sum of all the elements of lst. Use recursion to solve the problem, but do not use Python’s function sum.\n",
+    "def mySum(lst):\n",
+    "    if(len(lst) == 1):\n",
+    "        return lst[0]\n",
+    "    else: \n",
+    "        return lst[0] + mySum(lst[1:])\n",
+    "\n",
+    "x = [4, 5, 8]\n",
+    "mySum(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Assignment 5\n",
-    "\n",
-    "#Problem #1\n",
-    "def mySum(lst):\n",
-    "    s = 0\n",
-    "    \n",
-    "    for i in range(len(lst)):\n",
-    "        st = lst[i]\n",
-    "\n",
-    "    for i in lst:\n",
-    "        s += i"
+    "#2\n"
    ]
   }
  ],
@@ -27,7 +48,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
