--- a/Example Problems/ExamPracticeProblems.ipynb
+++ b/Example Problems/ExamPracticeProblems.ipynb
@@ -26,7 +26,9 @@
    "source": [
     "#Ex 1\n",
     "#Write the function book(dict_1) which receives the dictionary variable dict_1 containing the number of books borrowed from the library as values, against students’ admission years as keys. The function returns the dictionary dict_2 which consists of students’ admission years as keys and the percentage of books they borrowed.\n",
-    "\n",
+    "#Test Case\n",
+    "#print(book({2018: 20, 2019: 30, 2020: 17}))\n",
+    "#print(book({2018: 100, 2019: 30, 2020: 70, 2021: 60, 2022: 40}))\n",
     "\n",
     "dict_1 = {'2018':20, '2019': 30, '2020': 17}\n",
     "dict_2 = {'2018':100, '2019': 30, '2020': 70, '2021':60, '2022': 40}\n",
@@ -66,6 +68,9 @@
    "source": [
     "#Ex 2\n",
     "#Program a function area(M) which receives the coordinates of several points in each row and calculate the area enclosed between them using the shoelace formula. Assume that the points are ordered in a clockwise manner.\n",
+    "#Test Case\n",
+    "#M1 = np.array([[0,0], [5,0],[3,2], [0,2]])\n",
+    "#M2 = np.array([[1,6], [3,1], [7,2], [4,4], [8,5]])\n",
     "\n",
     "M1 = np.array([[0,0], [5,0],[3,2], [0,2]])\n",
     "M2 = np.array([[1,6], [3,1], [7,2], [4,4], [8,5]])\n",
@@ -103,6 +108,13 @@
    "source": [
     "#Ex 3\n",
     "#Write a function reverse(str_1) which receives a number or a string and returns its reverse.\n",
+    "#Test Case\n",
+    "#print(reverse(458))\n",
+    "#print(reverse(\"Hello\"))\n",
+    "#print(reverse(12.37))\n",
+    "#print(check(127.721))\n",
+    "#print(check(\"Madam\"))\n",
+    "#print(check(\"The cat sat on the mat\"))\n",
     "\n",
     "str1 = 'hello'\n",
     "\n",
@@ -160,6 +172,9 @@
     "#Write a function nth_root(n,a) which returns the nth root of a.\n",
     "#Use the Newton Raphson method to calculate the nth root by finding the solution of 𝑥^𝑛−𝑎=0\n",
     "#Define the error as relative approximate value and use a tolerance to ensure at least 10 significant digits.\n",
+    "#Test Case\n",
+    "#print(nth_root(5,3))\n",
+    "#print(nth_root(6,1200))\n",
     "\n",
     "def nth_root(n,a):\n",
     "    tol = 0.5 * 10 ** (2-10)/100            #ensures 10 significatn digits?\n",
@@ -194,6 +209,12 @@
    "source": [
     "#Ex 6\n",
     "#Write a function word_check(str_1,str_2) which returns True if the characters constituting str_1 and str_2 are the same, otherwise returns False. Capital and small letters are not the same characters.\n",
+    "#Test Case\n",
+    "#print(word_check(\"aaabc\", \"Abccc\"))\n",
+    "#print(word_check(\"aaabc\", \"abccc\"))\n",
+    "#print(word_check(\"abcdefghij\", \"jihgfedabc\"))\n",
+    "#print(word_check(\"AaBbccd\", \"cdAaBb\"))\n",
+    "#print(word_check(\"abcdA\", \"abccccccd\"))\n",
     "\n",
     "###Set doesnt have duplicates\n",
     "### since Capital letters != lowercase letters\n",
@@ -218,13 +239,6 @@
     "\n",
     "print(word_check_2(\"ABC\", \"abc\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
