--- a/Lecture Code/Week7.ipynb
+++ b/Lecture Code/Week7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
       "Wall time: 3.81 µs\n",
-      "717 ns ± 5.51 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "708 ns ± 0.951 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     },
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,28 +149,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line 0\n",
+      "This is line 1\n",
+      "This is line 2\n",
+      "This is line 3\n",
+      "This is line 4\n",
+      "This is another line\n",
+      "\n",
+      "['This is line 0\\n', 'This is line 1\\n', 'This is line 2\\n', 'This is line 3\\n', 'This is line 4\\n', 'This is another line\\n']\n",
+      "[[1.2  2.2  3.  ]\n",
+      " [4.14 5.65 6.42]]\n",
+      "[[1.2  2.2  3.  ]\n",
+      " [4.14 5.65 6.42]]\n",
+      "{'A': 0, 'B': 1, 'C': 2}\n",
+      "{'school': 'UC Berkeley', 'address': {'city': 'Berkeley', 'state': 'California', 'postal': '94720'}, 'list': ['student 1', 'student 2', 'student 3'], 'array': [1, 2, 3]}\n"
+     ]
+    }
+   ],
    "source": [
     "#Reading and Writing Data\n",
     "\n",
+    "##Write\n",
     "f = open('test.txt', 'w')                       #filename, mode\n",
     "for i in range(5):\n",
     "    f.write(f'This is line {i}\\n')\n",
-    "\n",
     "f.close()\n",
     "\n",
+    "##Append\n",
     "f = open('test.txt', 'a')\n",
     "f.write(f'This is another line\\n')\n",
-    "f.close()\n"
+    "f.close()\n",
+    "\n",
+    "##Read\n",
+    "f = open('./test.txt','r')\n",
+    "content = f.read()\n",
+    "f.close()\n",
+    "print(content)\n",
+    "\n",
+    "##Read As Lines\n",
+    "f = open('./test.txt','r')\n",
+    "contents = f.readlines()\n",
+    "f.close()\n",
+    "print(contents)\n",
+    "\n",
+    "##Numpy Arrays\n",
+    "arr = np.array([[1.2, 2.2, 3], [4.14,5.65,6.42]])\n",
+    "print(arr)\n",
+    "\n",
+    "np.savetxt('my_arr.txt', arr, fmt='%.2f', header = 'Col1 Col2 Col3')\n",
+    "\n",
+    "my_array = np.loadtxt('my_arr.txt')\n",
+    "print(arr)\n",
+    "\n",
+    "##CSV\n",
+    "data = np.random.random((100,5))\n",
+    "\n",
+    "np.savetxt('test.csv', data, fmt = '%.2f', delimiter = ',', header = 'c1, c2, c3, c4, c5')\n",
+    "\n",
+    "##PICKLE files\n",
+    "import pickle\n",
+    "dict_a = {'A':0, 'B':1, 'C':2}\n",
+    "pickle.dump(dict_a, open('test.pk1', 'wb'))\n",
+    "\n",
+    "my_dict = pickle.load(open('./test.pk1', 'rb'))\n",
+    "print(my_dict)\n",
+    "\n",
+    "import json\n",
+    "##JSON Files\n",
+    "school = {   \n",
+    "    \"school\": \"UC Berkeley\", \n",
+    "    \"address\": {\n",
+    "        \"city\": \"Berkeley\", \n",
+    "        \"state\": \"California\", \n",
+    "        \"postal\": \"94720\"\n",
+    "    }, \n",
+    "\n",
+    "    \"list\":[\n",
+    "        \"student 1\", \n",
+    "        'student 2', \n",
+    "        \"student 3\"\n",
+    "    ],\n",
+    "\n",
+    "    \"array\":[1,2,3]\n",
+    "}\n",
+    "\n",
+    "json.dump(school, open('school.json','w'))\n",
+    "my_school = json.load(open('./school.json', 'r'))\n",
+    "print(my_school)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello*World\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
