--- a/Assignments/Assignment8.ipynb
+++ b/Assignments/Assignment8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m content \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(content)):\n\u001b[0;32m---> 18\u001b[0m     myList[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[43mcontent\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     19\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(myList)\n",
+      "Cell \u001b[0;32mIn [4], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m content \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(content)):\n\u001b[0;32m---> 18\u001b[0m     myList[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[43mcontent\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     19\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(myList)\n",
       "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
      ]
     }
@@ -35,7 +35,7 @@
     "f = open('./Assignment_8_1.txt', 'r')\n",
     "content = f.readlines()\n",
     "for i in range(len(content)):\n",
-    "    myList[i] = float(content[i][:, -1])\n",
+    "    myList[i] = int(content[i][:, -1])\n",
     "f.close()\n",
     "print(myList)\n",
     "\n",
