--- a/Group Project/InverseGaussian.ipynb
+++ b/Group Project/InverseGaussian.ipynb
@@ -6,22 +6,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://towardsdatascience.com/find-the-inverse-of-a-matrix-using-python-3aeb05b4830"
+    "#https://towardsdatascience.com/find-the-inverse-of-a-matrix-using-python-3aeb05b48308"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Step:  0\n",
       "[[1. 0. 1. 1. 0. 0.]\n",
       " [0. 1. 1. 0. 1. 0.]\n",
       " [1. 1. 1. 0. 0. 1.]]\n",
-      "[[ 1.  0.  0.  0. -1.  1.]\n",
+      "Step:  1\n",
+      "[[ 1.  0.  1.  1.  0.  0.]\n",
+      " [ 0.  1.  1.  0.  1.  0.]\n",
+      " [ 0.  1.  0. -1.  0.  1.]]\n",
+      "Step:  2\n",
+      "[[ 1.  0.  1.  1.  0.  0.]\n",
+      " [ 0.  1.  1.  0.  1.  0.]\n",
+      " [ 0.  0. -1. -1. -1.  1.]]\n",
+      "Inverse is: \n",
+      " [[ 1.  0.  0.  0. -1.  1.]\n",
       " [ 0.  1.  0. -1.  0.  1.]\n",
       " [-0. -0.  1.  1.  1. -1.]]\n"
      ]
@@ -36,8 +46,8 @@
     "def InverseGaussian(A):\n",
     "\n",
     "        #Check if nxn matrix\n",
-    "        m = A.shape[0]  # m is number of rows in A\n",
-    "        n = A.shape[1]  # n is number of columns in A\n",
+    "        n = A.shape[0]  # m is number of rows in A\n",
+    "        m = A.shape[1]  # n is number of columns in A\n",
     "        \n",
     "        #if not nxn matrix, raise flag\n",
     "        if(m != n):\n",
@@ -48,27 +58,26 @@
     "        #Combine I and A matrix\n",
     "        M = np.concatenate((A, I), axis = 1)\n",
     "\n",
-    "        print(M)\n",
-    "\n",
     "        for i in range(0, n):\n",
-    "            #initialize row-swap iterator\n",
-    "            j = 1\n",
-    "            #Select pivot value\n",
-    "            pivot = M[i][i]\n",
-    "\n",
-    "            #find next non-zero leading coefficient\n",
-    "            while pivot == 0 and i + j < n:\n",
-    "                #perform row swap operation\n",
-    "                M[[i,i + j]] = M[[i + j, i]]\n",
-    "            #increment row-swap iterator\n",
-    "                j+=1\n",
-    "            #get new pivot\n",
-    "                pivot = M[i][i]\n",
+    "            print(\"Step: \",i)\n",
+    "            print(M)\n",
+    "                 \n",
+    "            j = 1                                   #initialize row-swap iterator\n",
+    "            pivot = M[i][i]                         #Select pivot value\n",
     "\n",
     "            #if pivot is zero, remaining rows are all zeros\n",
     "            if pivot == 0:\n",
     "                #return inverse matrix\n",
     "                return M[:,n:]\n",
+    "\n",
+    "\n",
+    "            while pivot == 0 and i + j < n:         #find next non-zero leading coefficient\n",
+    "                \n",
+    "                M[[i,i + j]] = M[[i + j, i]]        #perform row swap operation\n",
+    "                j+=1                                #increment row-swap iterator\n",
+    "                                                    \n",
+    "                pivot = M[i][i]                     #select (new) pivot\n",
+    "\n",
     "\n",
     "            #extract row\n",
     "            row = M[i]\n",
@@ -77,17 +86,201 @@
     "            M[i] = row / pivot\n",
     "\n",
     "            #iterate over all rows except pivot to get augmented matrix into RREF\n",
-    "            for j in [k for k in range(0,n) if k != i]:\n",
-    "                M[j] = M[j] - M[i] * M[j][i]\n",
+    "            #for j in [k for k in range(0,n) if k != i]:\n",
+    "                #M[j] = M[j] - M[i] * M[j][i]\n",
     "\n",
-    "        #inverse = \n",
+    "            #iterate over all rows except pivot to get augmented matrix into RREF\n",
+    "            for j in range(0,n):\n",
+    "                if j!=i:\n",
+    "                    M[j] = M[j] - M[i] * M[j][i]\n",
     "\n",
     "        #full version\n",
     "        return M\n",
     "        #abridged version\n",
     "        #return M[:, n:]\n",
+    "\n",
+    "print(\"Inverse is: \\n\", InverseGaussian(A))\n",
+    "#print(np.linalg.inv(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      " Step:  0\n",
+      "[[1. 0. 1. 1. 0. 0.]\n",
+      " [0. 1. 1. 0. 1. 0.]\n",
+      " [1. 1. 1. 0. 0. 1.]]\n",
+      " \n",
+      " Step:  1\n",
+      "[[ 1.  0.  1.  1.  0.  0.]\n",
+      " [ 0.  1.  1.  0.  1.  0.]\n",
+      " [ 0.  1.  0. -1.  0.  1.]]\n",
+      " \n",
+      " Step:  2\n",
+      "[[ 1.  0.  1.  1.  0.  0.]\n",
+      " [ 0.  1.  1.  0.  1.  0.]\n",
+      " [ 0.  0. -1. -1. -1.  1.]]\n",
+      "\n",
+      "Inverse is: \n",
+      " [[ 1.  0.  0.  0. -1.  1.]\n",
+      " [ 0.  1.  0. -1.  0.  1.]\n",
+      " [-0. -0.  1.  1.  1. -1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#given matrix\n",
+    "A = np.array([[1,0,1], [0,1,1], [1,1,1]])\n",
+    "\n",
+    "def InverseGaussian(A):\n",
+    "    \n",
+    "    n = GetDimension(A)\n",
+    "\n",
+    "    #Create identity Matrix\n",
+    "    I = np.identity(n=n)\n",
+    "    \n",
+    "    AugmentedMatrix = np.concatenate((A, I), axis = 1)            #Augmented Matrix Combine I and A matrix\n",
+    "\n",
+    "    for i in range(0, n):\n",
+    "        print(\" \\n Step: \",i)\n",
+    "        print(AugmentedMatrix)\n",
+    "\n",
+    "        inverseMatrix = RowOperations(AugmentedMatrix,i, n)\n",
+    "\n",
+    "    return inverseMatrix                            #full version\n",
+    "    #abridged version                               #return M[:, n:]\n",
     "        \n",
-    "print(InverseGaussian(A))"
+    "def GetDimension(A):\n",
+    "    #Check if nxn matrix\n",
+    "    n = A.shape[0]  # m is number of rows in A\n",
+    "    m = A.shape[1]  # n is number of columns in A\n",
+    "    \n",
+    "    #if not nxn matrix, raise flag\n",
+    "    if(m != n):\n",
+    "        raise Exception('Not an nxn matrix')\n",
+    "    \n",
+    "    return n\n",
+    "\n",
+    "\n",
+    "def RowOperations(M,i, n):\n",
+    "\n",
+    "    j = 1                                       #initialize row-swap iterator\n",
+    "    pivot = M[i][i]                             #Select pivot value\n",
+    "\n",
+    "    #if pivot is zero, remaining rows are all zeros\n",
+    "    if pivot == 0:\n",
+    "        return M[:,n:]                          #return inverse matrix\n",
+    "\n",
+    "    while pivot == 0 and i + j < n:                 #find next non-zero leading coefficient\n",
+    "        \n",
+    "        M[[i,i + j]] = M[[i + j, i]]                #perform row swap operation\n",
+    "        j+=1                                        #increment row-swap iterator\n",
+    "                                            \n",
+    "        pivot = M[i][i]                             #select (new) pivot\n",
+    "\n",
+    "    row = M[i]                                      #extract row\n",
+    "    M[i] = row / pivot                              #get 1 along the diagonal\n",
+    "\n",
+    "    #for j in [k for k in range(0,n) if k != i]:                        #iterate over all rows except pivot to get augmented matrix into RREF\n",
+    "        #M[j] = M[j] - M[i] * M[j][i]\n",
+    "\n",
+    "    for j in range(0,n):\n",
+    "        if j!=i:\n",
+    "            M[j] = M[j] - M[i] * M[j][i]\n",
+    "            #print('\\n Row Operation: ')\n",
+    "            #print(M)\n",
+    "    return M\n",
+    "    #return M[:,n:]\n",
+    "\n",
+    "\n",
+    "print(\"\\nInverse is: \\n\", InverseGaussian(A))\n",
+    "#print(np.linalg.inv(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Inverse is: \n",
+      " [[ 0. -1.  1.]\n",
+      " [-1.  0.  1.]\n",
+      " [ 1.  1. -1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#given matrix\n",
+    "A = np.array([[1,0,1], [0,1,1], [1,1,1]])\n",
+    "\n",
+    "def InverseGaussian(A):\n",
+    "    \n",
+    "    n = GetDimension(A)\n",
+    "    I = np.identity(n=n)                                          #Create identity Matrix\n",
+    "    \n",
+    "    AugmentedMatrix = np.concatenate((A, I), axis = 1)            #Augmented Matrix Combine I and A matrix\n",
+    "\n",
+    "    for i in range(0, n):\n",
+    "        inverseMatrix = RowOperations(AugmentedMatrix,i, n)\n",
+    "\n",
+    "    return inverseMatrix                                            #full version\n",
+    "\n",
+    "        \n",
+    "def GetDimension(A):\n",
+    "                                                            #Check if nxn matrix\n",
+    "    n = A.shape[0]                                          # m is number of rows in A\n",
+    "    m = A.shape[1]                                          # n is number of columns in A\n",
+    "    \n",
+    "    if(m != n):                                             #if not nxn matrix, raise flag\n",
+    "        raise Exception('Not an nxn matrix')\n",
+    "    \n",
+    "    return n\n",
+    "\n",
+    "\n",
+    "def RowOperations(M,i, n):\n",
+    "\n",
+    "    j = 1                                           #initialize row-swap iterator\n",
+    "    pivot = M[i][i]                                 #Select pivot value\n",
+    "\n",
+    "    #if pivot is zero, remaining rows are all zeros\n",
+    "    if pivot == 0:\n",
+    "        return M[:,n:]                              #return matrix\n",
+    "\n",
+    "    while pivot == 0 and i + j < n:                 #find next non-zero leading coefficient\n",
+    "        \n",
+    "        M[[i,i + j]] = M[[i + j, i]]                #perform row swap operation\n",
+    "        j+=1                                        #increment row-swap iterator\n",
+    "                                            \n",
+    "        pivot = M[i][i]                             #select (new) pivot\n",
+    "\n",
+    "    row = M[i]                                      #extract row\n",
+    "    M[i] = row / pivot                              #get 1 along the diagonal\n",
+    "\n",
+    "    for j in range(0,n):\n",
+    "        if j!=i:\n",
+    "            M[j] = M[j] - M[i] * M[j][i]\n",
+    "\n",
+    "    return M[:,n:]\n",
+    "\n",
+    "\n",
+    "print(\"\\nInverse is: \\n\", InverseGaussian(A))\n",
+    "#print(np.linalg.inv(A))"
    ]
   },
   {
