--- a/Group Project/MontyHall.ipynb
+++ b/Group Project/MontyHall.ipynb
@@ -69,10 +69,10 @@
     "    stickWinCounter = 0\n",
     "\n",
     "    for i in range(NSimulations):              #iterate through N # of Simulations\n",
-    "        #randomize indices\n",
-    "        random.shuffle(doors)               \n",
+    "        \n",
+    "        random.shuffle(doors)                   #randomize indices         \n",
     "\n",
-    "        #initial choice from 3 doors\n",
+    "                                                #initial choice from 3 doors\n",
     "        k = random.randrange(0,2)               #pick 0,1 or 2\n",
     "\n",
     "        if((doors[k]) != True):                 #if kth index in doors is not the prize\n",
@@ -80,18 +80,17 @@
     "        else:                                   #if kth index in doors is the prize\n",
     "            stickWinCounter +=1                 #should've stuck\n",
     "        \n",
-    "        #calculate probability every iteration\n",
+    "                                                        #calculate probability every iteration\n",
     "        winBySwitch = switchWinCounter/(i + 1)          #add 1 because i starts with 0\n",
     "        winByStick = stickWinCounter/(i + 1)\n",
-    "        #print(\"i\", i)\n",
-    "        #print(\"winBySwitch\", winBySwitch)\n",
-    "        #print(\"winByStick\", winByStick)\n",
+    "        \n",
     "\n",
     "        #update list values\n",
     "        switchWinProbability.append(winBySwitch)\n",
     "        stickWinProbabilitiy.append(winByStick)\n",
     "    \n",
     "    return switchWinProbability[-1], stickWinProbabilitiy[-1]\n",
+    "\n",
     "\n",
     "#need two variables to assign to, because 2 return values\n",
     "switch, stick = MontyHall(1000)\n",
