--- a/Lecture Code/Week10.ipynb
+++ b/Lecture Code/Week10.ipynb
@@ -311,7 +311,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#can change"
+   ]
   }
  ],
  "metadata": {
